--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 This file lists all contributors to the repository.
 
-Alexander Durant
-Luigy Jouny
+Alexander Durant (https://github.com/starfruitone)
+Nano420X (https://github.com/Nano420x)
